keyboard-shortcuts.html

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Comprehensive Rust 🦀\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2023-02-19 11:49+0700\n"
+"PO-Revision-Date: 2023-02-19 12:23+0700\n"
 "Last-Translator: Eyem <hndrbrm@gmail.com>\n"
 "Language-Team: Indonesian <translation-team-id@lists.sourceforge.net>\n"
 "Language: id\n"
@@ -1149,11 +1149,11 @@ msgstr ""
 
 #: src/running-the-course/keyboard-shortcuts.md:1
 msgid "# Keyboard Shortcuts"
-msgstr ""
+msgstr "# Pintasan Keyboard"
 
 #: src/running-the-course/keyboard-shortcuts.md:3
 msgid "There are several useful keyboard shortcuts in mdBook:"
-msgstr ""
+msgstr "Beberapa pintasan keyboard yang sering dipakai dalam mdBook:"
 
 #: src/running-the-course/keyboard-shortcuts.md:5
 msgid ""
@@ -1162,6 +1162,10 @@ msgid ""
 "* <kbd>Ctrl + Enter</kbd>: Execute the code sample that has focus.\n"
 "* <kbd>s</kbd>: Activate the search bar."
 msgstr ""
+"* <kbd>Panah-Kiri</kbd>: Beralih ke halaman sebelumnya.\n"
+"* <kbd>Panah-Kanan</kbd>: Beralih ke halaman berikutnya.\n"
+"* <kbd>Ctrl + Enter</kbd>: Menjalankan contoh kode yang sedang fokus.\n"
+"* <kbd>s</kbd>: Mengaktifkan bilah pencarian."
 
 #: src/running-the-course/translations.md:1
 msgid "# Translations"
